// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test BubbleChart component checking Advanced Settings 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  style={{}}
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontSize": 20,
            "lineHeight": 24,
            "paddingLeft": 10,
          }
        }
      />
    </View>
    <Text
      style={
        {
          "color": "#666666",
          "fontSize": 12,
          "lineHeight": 16,
        }
      }
    />
  </View>
  <View>
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      pointerEvents="box-none"
      style={
        {
          "position": "relative",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={250}
        bbWidth={750}
        focusable={false}
        height={250}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "height": "100%",
              "width": "100%",
            },
            {
              "flex": 0,
              "height": 250,
              "width": 750,
            },
          ]
        }
        vbHeight={250}
        vbWidth={750}
        width={750}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGRect
            fill={null}
            height={250}
            propList={
              [
                "fill",
              ]
            }
            width={750}
            x={0}
            y={0}
          />
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGRect
              fill={null}
              height={0}
              propList={
                [
                  "fill",
                ]
              }
              vectorEffect={1}
              width={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGRect
              fill={null}
              height={54.6}
              propList={
                [
                  "fill",
                ]
              }
              vectorEffect={1}
              width={92.8}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M 62, 42
      m -4.8, 0
      a 4.8, 4.8 0 1,0 9.6,0
      a 4.8, 4.8 0 1,0 -9.6,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
            <RNSVGText
              content={null}
              dx={
                [
                  0,
                ]
              }
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              name="legendData-labels-0"
              rotate={[]}
              x={
                [
                  76.4,
                ]
              }
              y={
                [
                  46.26,
                ]
              }
            >
              <RNSVGTSpan
                content="y"
                dx={
                  [
                    0,
                  ]
                }
                dy={
                  [
                    0,
                  ]
                }
                fill={
                  {
                    "payload": 4279571488,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontFamily": "Helvetica Neue",
                    "fontSize": 12,
                    "letterSpacing": "normal",
                    "textAnchor": "start",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    76.4,
                  ]
                }
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGLine
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3008714069,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              vectorEffect={1}
              x1={65}
              x2={725}
              y1={200}
              y2={200}
            />
            <RNSVGText
              content={null}
              dx={
                [
                  0,
                ]
              }
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              name="chart-axis-2-axisLabel-0"
              rotate={[]}
              x={
                [
                  395,
                ]
              }
              y={
                [
                  14.825,
                ]
              }
            >
              <RNSVGTSpan
                content="x(cm)"
                dx={
                  [
                    0,
                  ]
                }
                dy={
                  [
                    0,
                  ]
                }
                fill={
                  {
                    "payload": 4279571488,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontFamily": "Helvetica Neue",
                    "fontSize": 15,
                    "letterSpacing": "normal",
                    "textAnchor": "middle",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    395,
                  ]
                }
                y={[]}
              />
            </RNSVGText>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={65}
                x2={65}
                y1={200}
                y2={70}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={65}
                x2={65}
                y1={200}
                y2={205}
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    0,
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-2-tickLabels-0"
                rotate={[]}
                x={
                  [
                    65,
                  ]
                }
                y={
                  [
                    230.26,
                  ]
                }
              >
                <RNSVGTSpan
                  content="10"
                  dx={
                    [
                      0,
                    ]
                  }
                  dy={
                    [
                      0,
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": 12,
                      "letterSpacing": "normal",
                      "textAnchor": "middle",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth={0}
                  x={
                    [
                      65,
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={230}
                x2={230}
                y1={200}
                y2={70}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={230}
                x2={230}
                y1={200}
                y2={205}
              />
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={395}
                x2={395}
                y1={200}
                y2={70}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={395}
                x2={395}
                y1={200}
                y2={205}
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    0,
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-2-tickLabels-2"
                rotate={[]}
                x={
                  [
                    395,
                  ]
                }
                y={
                  [
                    230.26,
                  ]
                }
              >
                <RNSVGTSpan
                  content="20"
                  dx={
                    [
                      0,
                    ]
                  }
                  dy={
                    [
                      0,
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": 12,
                      "letterSpacing": "normal",
                      "textAnchor": "middle",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth={0}
                  x={
                    [
                      395,
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={560}
                x2={560}
                y1={200}
                y2={70}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={560}
                x2={560}
                y1={200}
                y2={205}
              />
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={725}
                x2={725}
                y1={200}
                y2={70}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={725}
                x2={725}
                y1={200}
                y2={205}
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    0,
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-2-tickLabels-4"
                rotate={[]}
                x={
                  [
                    725,
                  ]
                }
                y={
                  [
                    230.26,
                  ]
                }
              >
                <RNSVGTSpan
                  content="30"
                  dx={
                    [
                      0,
                    ]
                  }
                  dy={
                    [
                      0,
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": 12,
                      "letterSpacing": "normal",
                      "textAnchor": "middle",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth={0}
                  x={
                    [
                      725,
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGLine
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3008714069,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              vectorEffect={1}
              x1={65}
              x2={65}
              y1={70}
              y2={200}
            />
            <RNSVGText
              content={null}
              dx={
                [
                  0,
                ]
              }
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              matrix={
                [
                  6.123233995736766e-17,
                  -1,
                  1,
                  6.123233995736766e-17,
                  -115,
                  155,
                ]
              }
              name="chart-axis-3-axisLabel-0"
              rotate={[]}
              x={
                [
                  20,
                ]
              }
              y={
                [
                  132.825,
                ]
              }
            >
              <RNSVGTSpan
                content="y(cm)"
                dx={
                  [
                    0,
                  ]
                }
                dy={
                  [
                    0,
                  ]
                }
                fill={
                  {
                    "payload": 4279571488,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontFamily": "Helvetica Neue",
                    "fontSize": 15,
                    "letterSpacing": "normal",
                    "textAnchor": "middle",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    20,
                  ]
                }
                y={[]}
              />
            </RNSVGText>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={65}
                x2={725}
                y1={168.15}
                y2={168.15}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={65}
                x2={60}
                y1={168.15}
                y2={168.15}
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    0,
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-0"
                rotate={[]}
                x={
                  [
                    50,
                  ]
                }
                y={
                  [
                    172.41,
                  ]
                }
              >
                <RNSVGTSpan
                  content="150"
                  dx={
                    [
                      0,
                    ]
                  }
                  dy={
                    [
                      0,
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": 12,
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth={0}
                  x={
                    [
                      50,
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={65}
                x2={725}
                y1={135.65}
                y2={135.65}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={65}
                x2={60}
                y1={135.65}
                y2={135.65}
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    0,
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-1"
                rotate={[]}
                x={
                  [
                    50,
                  ]
                }
                y={
                  [
                    139.91,
                  ]
                }
              >
                <RNSVGTSpan
                  content="200"
                  dx={
                    [
                      0,
                    ]
                  }
                  dy={
                    [
                      0,
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": 12,
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth={0}
                  x={
                    [
                      50,
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={65}
                x2={725}
                y1={103.15}
                y2={103.15}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={65}
                x2={60}
                y1={103.15}
                y2={103.15}
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    0,
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-2"
                rotate={[]}
                x={
                  [
                    50,
                  ]
                }
                y={
                  [
                    107.41000000000001,
                  ]
                }
              >
                <RNSVGTSpan
                  content="250"
                  dx={
                    [
                      0,
                    ]
                  }
                  dy={
                    [
                      0,
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": 12,
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth={0}
                  x={
                    [
                      50,
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1={65}
                x2={725}
                y1={70.65}
                y2={70.65}
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1}
                vectorEffect={1}
                x1={65}
                x2={60}
                y1={70.65}
                y2={70.65}
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    0,
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-3"
                rotate={[]}
                x={
                  [
                    50,
                  ]
                }
                y={
                  [
                    74.91000000000001,
                  ]
                }
              >
                <RNSVGTSpan
                  content="300"
                  dx={
                    [
                      0,
                    ]
                  }
                  dy={
                    [
                      0,
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": 12,
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth={0}
                  x={
                    [
                      50,
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              d="M 65, 200
      m -5, 0
      a 5, 5 0 1,0 10,0
      a 5, 5 0 1,0 -10,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              propList={
                [
                  "fill",
                ]
              }
              responsible={true}
            />
            <RNSVGPath
              d="M 395, 135
      m -5, 0
      a 5, 5 0 1,0 10,0
      a 5, 5 0 1,0 -10,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              propList={
                [
                  "fill",
                ]
              }
              responsible={true}
            />
            <RNSVGPath
              d="M 725, 70
      m -5, 0
      a 5, 5 0 1,0 10,0
      a 5, 5 0 1,0 -10,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              propList={
                [
                  "fill",
                ]
              }
              responsible={true}
            />
          </RNSVGGroup>
          <View
            pointerEvents="box-none"
            style={
              {
                "left": 0,
                "position": "absolute",
                "top": 0,
                "zIndex": 99,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={250}
              bbWidth={750}
              focusable={false}
              height={250}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "height": "100%",
                    "overflow": "visible",
                    "width": "100%",
                  },
                  {
                    "flex": 0,
                    "height": 250,
                    "width": 750,
                  },
                ]
              }
              vbHeight={250}
              vbWidth={750}
              width={750}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGSvgView>
          </View>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Test BubbleChart component should render get tooltip  1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View
    accessibilityLabel="newcaption"
    accessible={true}
    onLayout={[Function]}
    style={{}}
  >
    <View
      style={
        [
          {
            "left": -36,
            "position": "absolute",
            "top": -35,
          },
          {
            "alignItems": "center",
            "backgroundColor": "#e7f9fd",
            "borderRadius": 12,
            "elevation": 2,
            "flex": 1,
            "justifyContent": "center",
            "minHeight": 60,
            "minWidth": 100,
            "opacity": 0.9,
            "position": "absolute",
            "zIndex": 99,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
            },
            {},
          ]
        }
      >
        10
      </Text>
      <Text
        style={{}}
      >
        20
      </Text>
      <View
        style={
          [
            {
              "bottom": -10,
              "left": 44,
              "transform": [
                {
                  "rotate": "180deg",
                },
              ],
            },
            {
              "backgroundColor": "transparent",
              "borderBottomColor": "#e7f9fd",
              "borderBottomWidth": 12,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 8,
              "borderRightColor": "transparent",
              "borderRightWidth": 8,
              "borderStyle": "solid",
              "height": 0,
              "overflow": "hidden",
              "position": "absolute",
              "width": 0,
            },
          ]
        }
      />
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#333333",
              "fontSize": 20,
              "lineHeight": 24,
              "paddingLeft": 10,
            }
          }
        />
      </View>
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 12,
            "lineHeight": 16,
          }
        }
      />
    </View>
    <View
      className="VictoryContainer"
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      pointerEvents="box-none"
      style={
        {
          "position": "relative",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="250"
        bbWidth="750"
        focusable={false}
        height={250}
        meetOrSlice={0}
        minX={0}
        minY={0}
        role="img"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "height": "100%",
              "width": "100%",
            },
            {
              "flex": 0,
              "height": 250,
              "width": 750,
            },
          ]
        }
        vbHeight={250}
        vbWidth={750}
        width={750}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGRect
            fill={null}
            height="250"
            propList={
              [
                "fill",
              ]
            }
            width="750"
            x="0"
            y="0"
          />
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGRect
              fill={null}
              height="0"
              propList={
                [
                  "fill",
                ]
              }
              vectorEffect={1}
              width="0"
              x="0"
              y="0"
            />
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGRect
              fill={null}
              height="54.6"
              propList={
                [
                  "fill",
                ]
              }
              vectorEffect={1}
              width="92.8"
              x="0"
              y="0"
            />
            <RNSVGPath
              d="M 62, 42
      m -4.8, 0
      a 4.8, 4.8 0 1,0 9.6,0
      a 4.8, 4.8 0 1,0 -9.6,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
            <RNSVGText
              content={null}
              dx={
                [
                  "0",
                ]
              }
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              name="legendData-labels-0"
              rotate={[]}
              x={
                [
                  "76.4",
                ]
              }
              y={
                [
                  "46.26",
                ]
              }
            >
              <RNSVGTSpan
                content="y"
                dx={
                  [
                    "0",
                  ]
                }
                dy={
                  [
                    "0",
                  ]
                }
                fill={
                  {
                    "payload": 4279571488,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontFamily": "Helvetica Neue",
                    "fontSize": "12",
                    "letterSpacing": "normal",
                    "textAnchor": "start",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    "76.4",
                  ]
                }
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGLine
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3008714069,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth="2"
              vectorEffect={1}
              x1="65"
              x2="725"
              y1="200"
              y2="200"
            />
            <RNSVGText
              content={null}
              dx={
                [
                  "0",
                ]
              }
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              name="chart-axis-2-axisLabel-0"
              rotate={[]}
              x={
                [
                  "395",
                ]
              }
              y={
                [
                  "242.825",
                ]
              }
            >
              <RNSVGTSpan
                content="x"
                dx={
                  [
                    "0",
                  ]
                }
                dy={
                  [
                    "0",
                  ]
                }
                fill={
                  {
                    "payload": 4279571488,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontFamily": "Helvetica Neue",
                    "fontSize": "15",
                    "letterSpacing": "normal",
                    "textAnchor": "middle",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    "395",
                  ]
                }
                y={[]}
              />
            </RNSVGText>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="65"
                x2="65"
                y1="200"
                y2="70"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="65"
                x2="65"
                y1="200"
                y2="205"
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    "0",
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-2-tickLabels-0"
                rotate={[]}
                x={
                  [
                    "65",
                  ]
                }
                y={
                  [
                    "230.26",
                  ]
                }
              >
                <RNSVGTSpan
                  content="10"
                  dx={
                    [
                      "0",
                    ]
                  }
                  dy={
                    [
                      "0",
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": "12",
                      "letterSpacing": "normal",
                      "textAnchor": "middle",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth="0"
                  x={
                    [
                      "65",
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="230"
                x2="230"
                y1="200"
                y2="70"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="230"
                x2="230"
                y1="200"
                y2="205"
              />
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="395"
                x2="395"
                y1="200"
                y2="70"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="395"
                x2="395"
                y1="200"
                y2="205"
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    "0",
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-2-tickLabels-2"
                rotate={[]}
                x={
                  [
                    "395",
                  ]
                }
                y={
                  [
                    "230.26",
                  ]
                }
              >
                <RNSVGTSpan
                  content="20"
                  dx={
                    [
                      "0",
                    ]
                  }
                  dy={
                    [
                      "0",
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": "12",
                      "letterSpacing": "normal",
                      "textAnchor": "middle",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth="0"
                  x={
                    [
                      "395",
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="560"
                x2="560"
                y1="200"
                y2="70"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="560"
                x2="560"
                y1="200"
                y2="205"
              />
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="725"
                x2="725"
                y1="200"
                y2="70"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="725"
                x2="725"
                y1="200"
                y2="205"
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    "0",
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-2-tickLabels-4"
                rotate={[]}
                x={
                  [
                    "725",
                  ]
                }
                y={
                  [
                    "230.26",
                  ]
                }
              >
                <RNSVGTSpan
                  content="30"
                  dx={
                    [
                      "0",
                    ]
                  }
                  dy={
                    [
                      "0",
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": "12",
                      "letterSpacing": "normal",
                      "textAnchor": "middle",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth="0"
                  x={
                    [
                      "725",
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGLine
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 3008714069,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth="2"
              vectorEffect={1}
              x1="65"
              x2="65"
              y1="70"
              y2="200"
            />
            <RNSVGText
              content={null}
              dx={
                [
                  "0",
                ]
              }
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              matrix={
                [
                  6.123233995736766e-17,
                  -1,
                  1,
                  6.123233995736766e-17,
                  -115,
                  155,
                ]
              }
              name="chart-axis-3-axisLabel-0"
              rotate={[]}
              x={
                [
                  "20",
                ]
              }
              y={
                [
                  "132.825",
                ]
              }
            >
              <RNSVGTSpan
                content="y"
                dx={
                  [
                    "0",
                  ]
                }
                dy={
                  [
                    "0",
                  ]
                }
                fill={
                  {
                    "payload": 4279571488,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontFamily": "Helvetica Neue",
                    "fontSize": "15",
                    "letterSpacing": "normal",
                    "textAnchor": "middle",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    "20",
                  ]
                }
                y={[]}
              />
            </RNSVGText>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="65"
                x2="725"
                y1="168.15"
                y2="168.15"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="65"
                x2="60"
                y1="168.15"
                y2="168.15"
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    "0",
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-0"
                rotate={[]}
                x={
                  [
                    "50",
                  ]
                }
                y={
                  [
                    "172.41",
                  ]
                }
              >
                <RNSVGTSpan
                  content="150"
                  dx={
                    [
                      "0",
                    ]
                  }
                  dy={
                    [
                      "0",
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": "12",
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth="0"
                  x={
                    [
                      "50",
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="65"
                x2="725"
                y1="135.65"
                y2="135.65"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="65"
                x2="60"
                y1="135.65"
                y2="135.65"
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    "0",
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-1"
                rotate={[]}
                x={
                  [
                    "50",
                  ]
                }
                y={
                  [
                    "139.91",
                  ]
                }
              >
                <RNSVGTSpan
                  content="200"
                  dx={
                    [
                      "0",
                    ]
                  }
                  dy={
                    [
                      "0",
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": "12",
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth="0"
                  x={
                    [
                      "50",
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="65"
                x2="725"
                y1="103.15"
                y2="103.15"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="65"
                x2="60"
                y1="103.15"
                y2="103.15"
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    "0",
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-2"
                rotate={[]}
                x={
                  [
                    "50",
                  ]
                }
                y={
                  [
                    "107.41000000000001",
                  ]
                }
              >
                <RNSVGTSpan
                  content="250"
                  dx={
                    [
                      "0",
                    ]
                  }
                  dy={
                    [
                      "0",
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": "12",
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth="0"
                  x={
                    [
                      "50",
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGLine
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeDasharray",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "16",
                    "4",
                  ]
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                vectorEffect={1}
                x1="65"
                x2="725"
                y1="70.65"
                y2="70.65"
              />
              <RNSVGLine
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 861230421,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth="1"
                vectorEffect={1}
                x1="65"
                x2="60"
                y1="70.65"
                y2="70.65"
              />
              <RNSVGText
                content={null}
                dx={
                  [
                    "0",
                  ]
                }
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                name="chart-axis-3-tickLabels-3"
                rotate={[]}
                x={
                  [
                    "50",
                  ]
                }
                y={
                  [
                    "74.91000000000001",
                  ]
                }
              >
                <RNSVGTSpan
                  content="300"
                  dx={
                    [
                      "0",
                    ]
                  }
                  dy={
                    [
                      "0",
                    ]
                  }
                  fill={
                    {
                      "payload": 4279571488,
                      "type": 0,
                    }
                  }
                  font={
                    {
                      "fontFamily": "Helvetica Neue",
                      "fontSize": "12",
                      "letterSpacing": "normal",
                      "textAnchor": "end",
                    }
                  }
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  rotate={[]}
                  stroke={
                    {
                      "payload": 861230421,
                      "type": 0,
                    }
                  }
                  strokeWidth="0"
                  x={
                    [
                      "50",
                    ]
                  }
                  y={[]}
                />
              </RNSVGText>
            </RNSVGGroup>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              d="M 65, 200
      m -5, 0
      a 5, 5 0 1,0 10,0
      a 5, 5 0 1,0 -10,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              propList={
                [
                  "fill",
                ]
              }
              responsible={true}
            />
            <RNSVGPath
              d="M 395, 135
      m -5, 0
      a 5, 5 0 1,0 10,0
      a 5, 5 0 1,0 -10,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              propList={
                [
                  "fill",
                ]
              }
              responsible={true}
            />
            <RNSVGPath
              d="M 725, 70
      m -5, 0
      a 5, 5 0 1,0 10,0
      a 5, 5 0 1,0 -10,0"
              fill={
                {
                  "payload": 4280252340,
                  "type": 0,
                }
              }
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              propList={
                [
                  "fill",
                ]
              }
              responsible={true}
            />
          </RNSVGGroup>
          <View
            pointerEvents="box-none"
            style={
              {
                "left": 0,
                "position": "absolute",
                "top": 0,
                "zIndex": 99,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="250"
              bbWidth="750"
              focusable={false}
              height={250}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "height": "100%",
                    "overflow": "visible",
                    "width": "100%",
                  },
                  {
                    "flex": 0,
                    "height": 250,
                    "width": 750,
                  },
                ]
              }
              vbHeight={250}
              vbWidth={750}
              width={750}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGSvgView>
          </View>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>,
]
`;
